# Karta

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  README.md
bridge/: package-lock.json  package.json  server.js
examples/: config.toml
src/: cli.rs  error.rs  main.rs
src/config/: agent.rs  mod.rs  principal.rs
src/conversation/: mod.rs  session.rs  state.rs
src/task/: memory.rs  mod.rs  task.rs
src/telephony/: call.rs  mock.rs  mod.rs  provider.rs  telnyx.rs  twilio.rs
src/ui/: backchannel.rs  display.rs  mod.rs
src/voice/: engine.rs  gemini.rs  mock.rs  mod.rs
